test/spec_vectors/block/fail/module_69.wat
(module (func $type-break-empty-vs-f32 (result f32) (block (result f32) (br 0) (f32.const 1.0))))